--- a/deployment.yml
+++ b/deployment.yml
@@ -1,4 +1,4 @@
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: catalog-lightblue-deployment
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: catalog
-          image: "us.icr.io/cldstd01-ns/catalog:latest"
+          image: "us.icr.io/cldstd02-ns/catalog:latest"
           imagePullPolicy: Always
           livenessProbe:
             tcpSocket:
